# rpaste-self-host

./: Cargo.toml
src/: main.rs
