[package]
name = "rpaste-self-host"
version = "0.1.0"
edition = "2021"

[features]
default = ["shuttle"]
shuttle = [
    "dep:shuttle-actix-web",
    "dep:shuttle-runtime",
    "dep:shuttle-static-folder",
    "dep:tokio",
]

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = { version = "0.16.0", optional = true }
shuttle-runtime = { version = "0.16.0", optional = true }
shuttle-static-folder = { version = "0.16.0", optional = true }
tokio = { version = "1.28.1", optional = true }
